[Add] login-form

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -17,13 +17,28 @@ body {
 
 header {
   color: white;
+
+  .navbar-left span {
+    font-size: 20px;
+    padding-top: 10px;
+  }
 }
 
-header .navbar-left span {
-  font-size: 20px;
-  padding-top: 10px;
-}
 
 a:visited {
   color: #666;
+}
+
+div {
+  .field {
+  margin-bottom: 10px;
+  }
+
+  .actions {
+  margin-bottom: 10px;
+  }
+}
+
+#notice {
+  color: green;
 }
