--- a/app/views/home/top.html.erb
+++ b/app/views/home/top.html.erb
@@ -9,12 +9,12 @@
     <div class="btn-wrapper">
       <div class="row">
         <p>
-          <a class="btn btn-info col-xs-10 col-xs-offset-1 sign-in" href="#">Log in</a>
+          <%= link_to 'Log in', new_user_session_path, class: "btn btn-info col-xs-10 col-xs-offset-1 sign-in" %>
         </p>
       </div>
       <div class="row">
         <p>
-          <a class="btn btn-success col-xs-10 col-xs-offset-1 sign-up" href="#">Sign Up</a>
+          <%= link_to 'Sign Up', new_user_registration_path, class: "btn btn-success col-xs-10 col-xs-offset-1 sign-up" %>
         </p>
       </div>
     </div>
