--- a/app/views/layouts/_body.html.erb
+++ b/app/views/layouts/_body.html.erb
@@ -1,4 +1,7 @@
 <div class="body">
   <div class="container">
+    <% if flash[:notice] %>
+      <%= flash[:notice] %>
+    <% end %>
   </div>
 </div>
