--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,6 +13,9 @@
     <%= render 'layouts/header' %>
     <div class="body">
       <div class="container">
+        <% if flash[:notice] %>
+          <p id="notice"><%= flash[:notice] %></p>
+        <% end %>
         <%= yield %>
       </div>
     </div>
