--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -4,7 +4,9 @@
     <nav>
       <ul class="nav navbar-nav navbar-right">
         <% if current_user %>
-          <li><%= link_to 'logout', destroy_user_session_path, method: :delete %></li>
+          <li><%= link_to 'Home', user_path(current_user), class: "glyphicon glyphicon-home home" %></li>
+          <li><%= link_to 'Users', users_path, class: "glyphicon glyphicon-user users" %></li>
+          <li><%= link_to 'logout', destroy_user_session_path, class: "glyphicon glyphicon-log-out logout", method: :delete %></li>
         <% else %>
           <li><%= link_to 'Home', root_path, class: "glyphicon glyphicon-home home" %></li>
           <li><%= link_to 'About', '/home/about', class: "glyphicon glyphicon-link about" %></li>
