--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,18 +1,3 @@
 <div class="row">
-  <div class="col-xs-3">
-    <h2>User info</h2>
-    <table class="table">
-      <tbody>
-        <tr></tr>
-        <tr>
-          <th>name</th>
-          <th><%= @user.name %></th>
-        </tr>
-        <tr>
-          <th>introduction</th>
-          <th><%= @user.introduction %></th>
-        </tr>
-      </tbody>
-    </table>
-  </div>
+  <%= render 'layouts/sidebar' %>
 </div>
