[Add] book model

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -38,3 +38,14 @@ div {
   margin-bottom: 10px;
   }
 }
+
+#error_explanation {
+  color: red;
+  ul {
+  margin: 0 33px 10px;
+  }
+}
+
+h3 {
+  font-size: 24px;
+}
