--- a/app/views/layouts/_sidebar.html.erb
+++ b/app/views/layouts/_sidebar.html.erb
@@ -19,4 +19,21 @@
       <span class="col-xs-12 btn btn-default glyphicon glyphicon-wrench"></span>
     <% end %>
   </div>
+  <h2>New book</h2>
+  <%= form_for(@book) do |f| %>
+    <div class="field row" %>
+      <%= f.label :title, 'Title' %>
+      <%= f.text_field :title, class: "col-xs-12" %>
+    </div>
+
+    <div class="field row" %>
+      <%= f.label :tbody, 'Option' %>
+      <%= f.text_field :body, class: "col-xs-12" %>
+    </div>
+
+    <div class="actions">
+      <%= f.submit 'Create Book' %>
+    </div>
+
+  <% end %>
 </div>
