--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -19,7 +19,7 @@
       </div>
 
       <div class="field row">
-        <%= f.label :body, 'Option' %>
+        <%= f.label :body, 'Opinion' %>
         <%= f.text_area :body, class: "col-xs-12" %>
       </div>
 
