--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -11,17 +11,33 @@ body {
   font-size: 14px;
 }
 
+p {
+  margin: 0 0 10px;
+}
+
+p, ol, ul, td {
+  font-family: verdana, arial, helvetica, sans-serif;
+  font-size: 13px;
+  line-height: 18px;
+}
+
 .body {
   margin-top: 51px;
 }
 
 header {
   color: white;
-
+  .navbar {
+  margin-bottom: 20px;
+  }
   .navbar-left span {
     font-size: 20px;
     padding-top: 10px;
   }
+}
+
+#notice {
+  color: green;
 }
 
 
@@ -48,4 +64,12 @@ div {
 
 h3 {
   font-size: 24px;
+}
+
+.col-xs-3 p {
+  margin-bottom: 10px;
+}
+
+td {
+  padding: 0 5px 7px 5px;
 }
