--- a/app/views/layouts/_books.html.erb
+++ b/app/views/layouts/_books.html.erb
@@ -5,7 +5,7 @@
         <tr>
           <th></th>
           <th>Title</th>
-          <th>Option</th>
+          <th>Opinion</th>
           <th colspan="3"></th>
         </tr>
       </thead>
