--- a/app/views/layouts/_sidebar.html.erb
+++ b/app/views/layouts/_sidebar.html.erb
@@ -27,12 +27,12 @@
     </div>
 
     <div class="field row" %>
-      <%= f.label :tbody, 'Option' %>
-      <%= f.text_field :body, class: "col-xs-12" %>
+      <%= f.label :tbody, 'Opinion' %>
+      <%= f.text_area :body, class: "col-xs-12" %>
     </div>
 
-    <div class="actions">
-      <%= f.submit 'Create Book' %>
+    <div class="actions row">
+      <%= f.submit 'Create Book', class: "btn btn-primary col-xs-12" %>
     </div>
 
   <% end %>
